--- a/package.json
+++ b/package.json
@@ -3,21 +3,39 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=22.x"
+  },
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "install": "npx playwright install && pnpm exec playwright install-deps",
+    "start": "NODE_ENV=production node dist/server.mjs",
+    "build": "pnpm client:build && pnpm server:build",
+    "dev": "node --env-file=.env src/server/index.ts",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "client:build": "tsc -b && vite build",
+    "server:build": "esbuild --packages=external --bundle --format=esm --platform=node --outfile=dist/server.mjs src/server/index.ts"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongodb": "^6.15.0",
+    "playwright": "^1.51.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
+    "tailwindcss": "^4.0.17",
+    "vite-express": "^0.20.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/vite": "^4.0.17",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "esbuild": "^0.25.1",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
